# TinyRenderer

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  geometry.h  main.cc  model.cc  model.h  tgaimage.cc
